fixed spacing

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -18,20 +18,17 @@ textarea {
     src: local('Segoe UI'), url("../font/Segoe_UI.ttf") format("ttf");
   }
 
-  html{
+  html, body{
     width: 100%;
-    height: 100%;
+    height: 100vh;
+    min-height: 100vh;
     padding: 0;
     margin: 0;
     overflow-x: hidden;
+    background-color: rgb(250, 250, 250);
   }
 
-  body{
-    background-color: rgb(250, 250, 250);
-    padding: 0;
-    margin: 0;
-    height: 100vh; /* Ensure the body takes full viewport height */
-  }
+
 
   .navbar
   {
@@ -50,7 +47,7 @@ textarea {
     margin-top: 12px;
     display: flex;
     flex-direction: row;
-    gap: 50px;
+    
     
   }
   .brand{
@@ -83,16 +80,17 @@ textarea {
   {
     display: flex;
     flex-direction: row;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     
   }
 
 .sidebar{
     width: 200px;
-    height: 100vh;
+    height: 100%;
     background-color: #f0f0f0;
-    overflow-y: scroll;
+    overflow-y: auto;
+    overflow-x: hidden;
     border: solid 1px #d1d1d1;
     
   }
@@ -102,7 +100,8 @@ textarea {
     height: 100%;
     display: flex;
     flex-direction: column;
-    padding: 20px;
+    
+    margin: 0;
   }
 
   .subnavbar
@@ -141,8 +140,8 @@ textarea {
     display: flex; 
     align-items: center;
     height: 48px;
-    margin: 10px 0;
-    background-color: #e4e4e4;
+    
+    
     width: 100%;
     
   }
@@ -150,6 +149,7 @@ textarea {
   .sidebar-item:hover
   {
     background-color: #f7f7f7;
+    border-left: #0a57c9 solid 10px;
   }
 
   .sidebar-item-link{
@@ -167,6 +167,11 @@ textarea {
     gap: 15px;
     display: flex;
     flex-direction: column;
+    
+  }
+
+  .work-space-contaner{
+    padding: 20px;
   }
 
   .filter-bar
@@ -192,4 +197,7 @@ textarea {
   hr{
     border-bottom: #e4e4e4 solid 1px;
     width: 99%;
+  }
+  .btn{
+    cursor: pointer;
   }
